--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,6 @@ body{
     margin: 0;
 }
 .new-arrival-heading{
-    margin: 5rem 0;
     color: white;
     font-family: 'Recursive', sans-serif;
 }
@@ -15,7 +14,10 @@ body{
     width: 560px;
 }
 .card-img-top{
-    height: 667px !important;
+    object-fit: contain;
+}
+.nike-images{
+    object-fit: scale-down;
 }
 .cardDeck{
     padding: 25px 10px;
@@ -24,4 +26,16 @@ body{
 .btn{
     margin: 10px;
     width: 25%;
+}
+
+.card-text,.card-title{
+    color: black;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.logo{
+    width: 25%;
+    margin: 50px;
+}
+.top-heading{
+    color: white;
 }
